# interventional-post-training-speech

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
configs/: __init__.py  default.yaml
configs/dataset/: content_only.yaml  speaker_only.yaml  synthetic.yaml
configs/eval/: default.yaml
configs/experiment/: baseline.yaml  content_only.yaml  joint.yaml  single_subspace.yaml  speaker_only.yaml
configs/hydra/job_logging/: logging.yaml
configs/logging/: default.yaml  tensorboard.yaml  wandb.yaml
configs/loss_weights/: equal_weights.yaml
configs/model/: baseline.yaml  default.yaml
configs/model/disentanglement_network/: mlp.yaml
configs/model/pooling_layer/: default.yaml  mean.yaml
configs/preprocess/: default.yaml  interventional.yaml  speech_commands.yaml  voxceleb.yaml
configs/scheduler/: default.yaml  one_cycle.yaml  reduce_on_plateau.yaml
data/VoxCeleb1/: gender.txt
interventional-dataset/: __init__.py  main.py
scripts/: _generate_exhaustive.sh  generate_dataset.sh  preprocess.sh  preprocess_multi.sh  train_eval.sh  train_eval_multi.sh
src/: __init__.py  evaluate_model.py  main.py  preprocess.py  train_model.py
src/evaluation/: __init__.py  dataset.py  embeddings.py  evaluate.py  model.py  utils.py
src/shared/: __init__.py  callbacks.py  dataset.py  encoder_pooling.py  utils.py
src/train/: __init__.py  dataset.py  disentanglement_network.py  experiment.py  loss.py  model.py
