[project]
name = "interventional-post-training-speech"
version = "1.0.0"
description = "Code for the paper 'Learning task-specific subspaces via interventional post-training of speech foundation models'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "lightning>=2.5.6",
    "numpy<=2.3",
    "pandas>=2.3.3",
    "s3prl[all]>=0.4.18",
    "scikit-learn>=1.7.2",
    "scipy==1.16.3",
    "seaborn>=0.13.2",
    "wandb==0.22.3",
]

[project.optional-dependencies]
cpu = [
  "torch==2.6.0",
  "torchcodec==0.2.1",
  "torchaudio==2.6"
]
cu124 = [
  "torch<2.7",
  "torchcodec<0.3",
  "torchaudio==2.6"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchcodec = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
